// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<card> demo: render [actions] correctly 1`] = `
"<div class=\\"sd-card sd-card-size-medium sd-card-bordered\\" style=\\"width: 360px;\\">
  <!---->
  <div class=\\"sd-card-cover\\">
    <div style=\\"height: 204px; overflow: hidden;\\"><img style=\\"width: 100%; transform: translateY(-20px);\\" alt=\\"dessert\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a20012a2d4d5b9db43dfc6a01fe508c0.png~tplv-uwbnlip3yd-webp.webp\\"></div>
  </div>
  <div class=\\"sd-card-body\\">
    <div class=\\"sd-card-meta\\">
      <div class=\\"sd-card-meta-content\\">
        <div class=\\"sd-card-meta-title\\">Card Title</div>
        <div class=\\"sd-card-meta-description\\">This is the description</div>
      </div>
      <div class=\\"sd-card-meta-footer\\">
        <div class=\\"sd-card-meta-avatar\\">
          <div style=\\"display: flex; align-items: center; color: rgb(29, 33, 41);\\">
            <div style=\\"width: 24px; height: 24px; font-size: 12px; margin-right: 8px;\\" class=\\"sd-avatar sd-avatar-circle\\"><span class=\\"sd-avatar-text\\"> A </span>
              <!--v-if-->
            </div><span class=\\"sd-typography\\">Username<!----><!--v-if--><!--v-if--><!--v-if--></span>
          </div>
        </div>
        <div class=\\"sd-card-actions\\">
          <div class=\\"sd-card-actions-right\\"><span class=\\"sd-card-actions-item\\"><span class=\\"icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-thumb-up\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 17v26m35.17-21.394-5.948 18.697a1 1 0 0 1-.953.697H14V19h3l9.403-12.223a1 1 0 0 1 1.386-.196l2.535 1.87a6 6 0 0 1 2.044 6.974L31 19h9.265a2 2 0 0 1 1.906 2.606Z\\"></path></svg></span></span><span class=\\"sd-card-actions-item\\"><span class=\\"icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-share-internal\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M40 35v6H8v-6m1.108-4c1.29-8.868 13.917-15.85 29.392-15.998M30 6l9 9-9 9\\"></path></svg></span></span><span class=\\"sd-card-actions-item\\"><span class=\\"icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-more\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path><path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\"></path></svg></span></span></div>
        </div>
      </div>
    </div>
    <div class=\\"sd-card-actions\\">
      <div class=\\"sd-card-actions-right\\"><span class=\\"sd-card-actions-item\\"><span class=\\"icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-thumb-up\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 17v26m35.17-21.394-5.948 18.697a1 1 0 0 1-.953.697H14V19h3l9.403-12.223a1 1 0 0 1 1.386-.196l2.535 1.87a6 6 0 0 1 2.044 6.974L31 19h9.265a2 2 0 0 1 1.906 2.606Z\\"></path></svg></span></span><span class=\\"sd-card-actions-item\\"><span class=\\"icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-share-internal\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M40 35v6H8v-6m1.108-4c1.29-8.868 13.917-15.85 29.392-15.998M30 6l9 9-9 9\\"></path></svg></span></span><span class=\\"sd-card-actions-item\\"><span class=\\"icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-more\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path><path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\"></path></svg></span></span></div>
    </div>
  </div>
</div>"
`;

exports[`<card> demo: render [basic] correctly 1`] = `
"<div style=\\"display: flex;\\">
  <div class=\\"sd-card sd-card-size-medium sd-card-bordered\\" style=\\"width: 360px;\\">
    <div class=\\"sd-card-header\\">
      <div class=\\"sd-card-header-title\\">SD Card</div>
      <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
          <!--v-if-->More
        </a></div>
    </div>
    <!---->
    <div class=\\"sd-card-body\\"> ByteDance's core product, Toutiao (\\"Headlines\\"), is a content platform in China and around the world. Toutiao started out as a news recommendation engine and gradually evolved into a platform delivering content in various formats.
      <!---->
    </div>
  </div>
</div>"
`;

exports[`<card> demo: render [bordered] correctly 1`] = `
"<div style=\\"display: flex; width: 100%; box-sizing: border-box; padding: 40px;\\">
  <div class=\\"sd-card sd-card-size-medium\\" style=\\"width: 360px;\\">
    <div class=\\"sd-card-header\\">
      <div class=\\"sd-card-header-title\\">SD Card</div>
      <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
          <!--v-if-->More
        </a></div>
    </div>
    <!---->
    <div class=\\"sd-card-body\\"> Card content <br> Card content
      <!---->
    </div>
  </div>
  <div class=\\"sd-card sd-card-size-medium sd-card-hoverable\\" style=\\"width: 360px; margin-left: 24px;\\">
    <div class=\\"sd-card-header\\">
      <div class=\\"sd-card-header-title\\">Hover me</div>
      <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
          <!--v-if-->More
        </a></div>
    </div>
    <!---->
    <div class=\\"sd-card-body\\"> Card content <br> Card content
      <!---->
    </div>
  </div>
</div>"
`;

exports[`<card> demo: render [content] correctly 1`] = `
"<div class=\\"sd-card sd-card-size-medium sd-card-bordered sd-card-hoverable\\" style=\\"width: 360px; margin-bottom: 20px;\\">
  <!---->
  <!---->
  <div class=\\"sd-card-body\\">
    <div style=\\"display: flex; align-items: center; justify-content: space-between;\\"><span style=\\"display: flex; align-items: center; color: rgb(29, 33, 41);\\"><div style=\\"width: 28px; height: 28px; font-size: 14px; margin-right: 8px; background-color: rgb(22, 93, 255);\\" class=\\"sd-avatar sd-avatar-circle\\"><span class=\\"sd-avatar-text\\"> A </span>
      <!--v-if-->
    </div><span class=\\"sd-typography\\">Username<!----><!--v-if--><!--v-if--><!--v-if--></span></span><a class=\\"sd-link sd-link-status-normal\\">
      <!--v-if-->More
    </a>
  </div>
  <!---->
</div>
</div>"
`;

exports[`<card> demo: render [grid] correctly 1`] = `
"<div class=\\"sd-card sd-card-size-medium\\" style=\\"width: 100%;\\">
  <!---->
  <!---->
  <div class=\\"sd-card-body\\">
    <div class=\\"sd-card-grid sd-card-grid-hoverable\\" style=\\"width: 25%;\\">
      <div class=\\"sd-card sd-card-size-medium card-demo\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\">
          <p style=\\"margin: 0px;\\">Card allow to hover</p>
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-card-grid\\" style=\\"width: 25%;\\">
      <div class=\\"sd-card sd-card-size-medium card-demo\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\">
          <p style=\\"margin: 0px;\\">Card content</p>
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-card-grid sd-card-grid-hoverable\\" style=\\"width: 25%;\\">
      <div class=\\"sd-card sd-card-size-medium card-demo\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\">
          <p style=\\"margin: 0px;\\">Card allow to hover</p>
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-card-grid\\" style=\\"width: 25%;\\">
      <div class=\\"sd-card sd-card-size-medium card-demo\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\">
          <p style=\\"margin: 0px;\\">Card content</p>
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-card-grid sd-card-grid-hoverable\\" style=\\"width: 25%;\\">
      <div class=\\"sd-card sd-card-size-medium card-demo\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\">
          <p style=\\"margin: 0px;\\">Card allow to hover</p>
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-card-grid\\" style=\\"width: 25%;\\">
      <div class=\\"sd-card sd-card-size-medium card-demo\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\">
          <p style=\\"margin: 0px;\\">Card content</p>
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-card-grid sd-card-grid-hoverable\\" style=\\"width: 25%;\\">
      <div class=\\"sd-card sd-card-size-medium card-demo\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\">
          <p style=\\"margin: 0px;\\">Card allow to hover</p>
          <!---->
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`<card> demo: render [hoverable] correctly 1`] = `
"<div style=\\"display: flex;\\">
  <div class=\\"sd-card sd-card-size-medium sd-card-bordered sd-card-hoverable\\" style=\\"width: 360px;\\">
    <div class=\\"sd-card-header\\">
      <div class=\\"sd-card-header-title\\">SD Card</div>
      <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
          <!--v-if-->More
        </a></div>
    </div>
    <!---->
    <div class=\\"sd-card-body\\"> Card content <br> Card content
      <!---->
    </div>
  </div>
  <div class=\\"sd-card sd-card-size-medium sd-card-bordered sd-card-hoverable card-demo\\">
    <div class=\\"sd-card-header\\">
      <div class=\\"sd-card-header-title\\">Custom hover style</div>
      <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
          <!--v-if-->More
        </a></div>
    </div>
    <!---->
    <div class=\\"sd-card-body\\"> Card content <br> Card content
      <!---->
    </div>
  </div>
</div>"
`;

exports[`<card> demo: render [inner] correctly 1`] = `
"<div class=\\"sd-card sd-card-size-medium sd-card-bordered\\">
  <div class=\\"sd-card-header\\">
    <div class=\\"sd-card-header-title\\">SD Card</div>
    <!---->
  </div>
  <!---->
  <div class=\\"sd-card-body\\">
    <div class=\\"sd-card sd-card-size-medium sd-card-bordered\\" style=\\"margin-bottom: 20px;\\">
      <div class=\\"sd-card-header\\">
        <div class=\\"sd-card-header-title\\">Inner Card Title</div>
        <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
            <!--v-if-->More
          </a></div>
      </div>
      <!---->
      <div class=\\"sd-card-body\\"> Inner Card Content
        <!---->
      </div>
    </div>
    <div class=\\"sd-card sd-card-size-medium sd-card-bordered\\">
      <div class=\\"sd-card-header\\">
        <div class=\\"sd-card-header-title\\">Inner Card Title</div>
        <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
            <!--v-if-->More
          </a></div>
      </div>
      <!---->
      <div class=\\"sd-card-body\\"> Inner Card Content
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`<card> demo: render [meta] correctly 1`] = `
"<div class=\\"sd-card sd-card-size-medium sd-card-bordered sd-card-hoverable\\" style=\\"width: 360px;\\">
  <!---->
  <div class=\\"sd-card-cover\\">
    <div style=\\"height: 204px; overflow: hidden;\\"><img style=\\"width: 100%; transform: translateY(-20px);\\" alt=\\"dessert\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a20012a2d4d5b9db43dfc6a01fe508c0.png~tplv-uwbnlip3yd-webp.webp\\"></div>
  </div>
  <div class=\\"sd-card-body\\">
    <div class=\\"sd-card-meta\\">
      <div class=\\"sd-card-meta-content\\">
        <div class=\\"sd-card-meta-title\\">Card Title</div>
        <div class=\\"sd-card-meta-description\\"> Card content <br> Card content </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;

exports[`<card> demo: render [row] correctly 1`] = `
"<div style=\\"box-sizing: border-box; width: 100%; padding: 40px;\\">
  <div class=\\"sd-row sd-row-align-start sd-row-justify-start\\" style=\\"margin-left: -10px; margin-right: -10px; margin-bottom: 20px;\\">
    <div class=\\"sd-col sd-col-8\\" style=\\"padding-left: 10px; padding-right: 10px;\\">
      <div class=\\"sd-card sd-card-size-medium\\" style=\\"width: 100%;\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\"> Card content
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-col sd-col-8\\" style=\\"padding-left: 10px; padding-right: 10px;\\">
      <div class=\\"sd-card sd-card-size-medium\\" style=\\"width: 100%;\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\"> Card content
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-col sd-col-8\\" style=\\"padding-left: 10px; padding-right: 10px;\\">
      <div class=\\"sd-card sd-card-size-medium\\" style=\\"width: 100%;\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\"> Card content
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div class=\\"sd-row sd-row-align-start sd-row-justify-start\\" style=\\"margin-left: -10px; margin-right: -10px;\\">
    <div class=\\"sd-col sd-col-16\\" style=\\"padding-left: 10px; padding-right: 10px;\\">
      <div class=\\"sd-card sd-card-size-medium\\" style=\\"width: 100%;\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\"> Card content
          <!---->
        </div>
      </div>
    </div>
    <div class=\\"sd-col sd-col-8\\" style=\\"padding-left: 10px; padding-right: 10px;\\">
      <div class=\\"sd-card sd-card-size-medium\\" style=\\"width: 100%;\\">
        <div class=\\"sd-card-header\\">
          <div class=\\"sd-card-header-title\\">SD Card</div>
          <div class=\\"sd-card-header-extra\\"><a class=\\"sd-link sd-link-status-normal\\">
              <!--v-if-->More
            </a></div>
        </div>
        <!---->
        <div class=\\"sd-card-body\\"> Card content
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>"
`;
